--- a/example_msft.ipynb
+++ b/example_msft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ceeb958b",
+   "id": "94399371",
    "metadata": {},
    "source": [
     "#### Пример использования библиотеки yfinance, для построения графиков последней цены опционов Put и Call по акциям Microsoft"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b1fef71",
+   "id": "f9370ccf",
    "metadata": {},
    "source": [
     "Импортируем основную библиотеку yfinance, а для построения графиков импортируем matplotlib"
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "775237ef",
+   "execution_count": 39,
+   "id": "600d2507",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.4.3'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import yfinance package\n",
     "import yfinance as yf\n",
@@ -29,12 +40,13 @@
     "# Для построения графиков\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "matplotlib.__version__"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a5b87d4c",
+   "id": "1cd2f819",
    "metadata": {},
    "source": [
     "Выбираем стиль для графиков"
@@ -43,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7b4695c1",
+   "id": "090072ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bba99401",
+   "id": "a1aba60e",
    "metadata": {},
    "source": [
     "Создаем переменную для размера шрифта"
@@ -61,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6d58cdbc",
+   "id": "1e9a9053",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa4d1c7",
+   "id": "6c83032c",
    "metadata": {},
    "source": [
     "Создаем переменную тикер для акций Microsoft"
@@ -79,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "46dd1f9b",
+   "id": "860086ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "289b4397",
+   "id": "90a9a75e",
    "metadata": {},
    "source": [
     "Выводим все даты экспирации для опционов Microsoft"
@@ -97,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "cb744d30",
+   "id": "52c8a982",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51fb5662",
+   "id": "93a0e83d",
    "metadata": {},
    "source": [
     "Будем работать с таблицей опционов с ближайщей датой экспирации"
@@ -142,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "bb801510",
+   "id": "143d4999",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d4e6c5e",
+   "id": "a8822ff6",
    "metadata": {},
    "source": [
     "Распечатаем начало таблицы с Колами"
@@ -160,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "840ce6fa",
+   "id": "9484e8c1",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab49d01",
+   "id": "e1a825a9",
    "metadata": {},
    "source": [
     "Распечатаем начало таблицы с Путами"
@@ -333,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bf45b963",
+   "id": "5a367669",
    "metadata": {},
    "outputs": [
     {
@@ -496,27 +508,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "3592d83d",
+   "cell_type": "markdown",
+   "id": "9a989245",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_10480/3176341296.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\semen\\AppData\\Local\\Temp/ipykernel_10480/3176341296.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Выбираем наименование шрифта\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "Выбираем наименование шрифта"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "f839497a-75ea-4c3d-9380-fff085ffba14",
    "metadata": {},
    "outputs": [],
@@ -527,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8e7e03e",
+   "id": "a3dc486c",
    "metadata": {},
    "source": [
     "Строим график по последним ценам для опционов Call для разных страйков"
@@ -536,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "03b66ba0",
+   "id": "6e080f44",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9aa3aa8",
+   "id": "56e13340",
    "metadata": {},
    "source": [
     "Строим график по последним ценам для опционов Put для разных страйков"
@@ -579,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "edc7f32e",
+   "id": "ade3b864",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abf43c62",
+   "id": "3c06a5d0",
    "metadata": {},
    "outputs": [],
    "source": []
